WIP refactoring pullcommand locale mapping - not backward compatible
Could be made backward compatible by setting LocaleMappingType.MAP_ONLY, but the new default seems better